# feather-tools

./: .gitignore  README.md  pyproject.toml
src/feather/: f2csv  fmore.py  ftail
src/feather/test/: simple_feather.feather  test_fmore.py
src/feather_tools/: csv2f  csv2f.py  f2csv.py  fless.py  ftail.py  ftools_workhorse.py  fwc.py
src/feather_tools/test/: csv2f_copy.py  test_ftools_workhorse.py
src/pyscripts_for_CLI.egg-info/: PKG-INFO  SOURCES.txt
